<resources>
    <string name="app_name">ShopInZip</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="orders">Orders</string>
    <string name="favorites">Favorites</string>
    <string name="messages">Messages</string>
    <string name="promos">Promos</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="get_my_store_listed">Get My Store Listed</string>
    <string name="about_shop_in_zip">About Shop In Zip</string>
    <string name="or_connect_with_email">Or connect with email</string>
    <string name="_201_555_0123">(201) 555–0123</string>
    <string name="by_continuing_you_may_receive_an_sms_n_for_verification">By continuing you may receive an SMS for \nverification</string>
    <string name="by_continuing_you_may_receive_an_email_n_for_verification">By continuing you may receive an Email for \nverification</string>
    <string name="next">NEXT</string>
    <string name="user123_gmail_com">Email ID</string>
    <string name="choose_your_favorite_stores">Choose your favorite stores</string>
    <string name="add_products_to_your_cart">Add products to your cart</string>
    <string name="business_name">Business Name:</string>
    <string name="business_address">Business Address:</string>
    <string name="category">Category:</string>
    <string name="mobile">Mobile:</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="add_new_address">Add New Address</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="_10_items">10 Items</string>
    <string name="message">Message</string>
    <string name="welcome_to">Welcome to</string>
    <string name="get_started">Get Started</string>
    <string name="your_personal_shopper">Your personal Shopper</string>
    <string name="more_time_for_the_things_you_love">More time for the things you love</string>
    <string name="dove_hair_fall_rescue_shampoo">DOVE Hair Fall Rescue Shampoo..</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="key_food_harlem">Key Food Harlem</string>
    <string name="order_id">Order ID:</string>
    <string name="help">Help</string>
    <string name="comment_here">Comment here</string>
    <string name="all_frequently_asked_questions">All frequently asked questions</string>
    <string name="how_pickup_work">How pickup work?</string>
    <string name="should_i_tip_delivery_guy">Should I tip Delivery guy?</string>
    <string name="how_it_works">How it works?</string>
    <string name="what_is_shopinzip">What is ShopInZip?</string>
    <string name="profile">Profile</string>
    <string name="or_connect_with_mobile_number">Or connect with mobile number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_instruction">Delivery Instruction :</string>
    <string name="apt_floor_company_optional">Apt# / Floor / Company(optional) :</string>
    <string name="address">Address :</string>
    <string name="names">Name :</string>
    <string name="add_address">Add Address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="map_key">AIzaSyACOlFWmKePD6tpTEcYGzGRgQ02bHWZfx8</string>
    <string name="didn_t_receive_a_verification_code">Didn\'t receive a verification code?</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_email">Enter your Email ID</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="share_shop_in_zip">Share Shop In Zip</string>
    <string name="save">Save</string>
    <string name="share_your_experience">Share your experience</string>
    <string name="write_a_review">Write a Review</string>
    <string name="your_review_matters_a_lot_to_us_it_helps_us_to_improve_nour_stores">Your review matters a lot to us. it helps us to improve \nour stores.</string>
    <string name="please_write_a_review">Please Write a Review</string>
    <string name="choose_default_store">Choose Default Store</string>
    <string name="logout">LogOut</string>
    <string name="skip">SKIP</string>
    <string name="about_shopinzip">About SHOPINZIP</string>
    <string name="about_privacy_policy">About Privacy Policy</string>
    <string name="about_terms_of_service">About Terms of Service</string>
    <string name="about_our_legal_teams">About our Legal teams</string>
    <string name="cart">Cart</string>
    <string name="search_for_items_or_stores">Search for items or stores</string>
    <string name="emailid">Email ID</string>
    <string name="emailormobile">Email or Mobile No</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="mobileno">Mobile No</string>
    <string name="otp">OTP</string>
    <string name="confpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="alreadysign">Already have an account?  </string>
    <string name="forgpass">Forgot your password?</string>
    <string name="forgpassmsg">Enter your email address and we will send you instructions to reset your password.</string>
    <string name="send">Send</string>
    <string name="newpassword">Enter New Password</string>
    <string name="change">Change</string>
    <string name="confirmloca">Confirm Location</string>
    <string name="error_empty_email">Please Enter email</string>
    <string name="error_empty_password">Please Enter Password</string>
    <string name="error_empty_new_password">Please Enter New Password</string>
    <string name="error_empty_old_password">Please Enter Old Password</string>
    <string name="error_empty_name">Please Enter Name</string>
    <string name="error_empty_phone">Please Enter Phone Number</string>
    <string name="error_empty_emailmbl">Please enter Email ID/ Mobile No</string>
    <string name="error_empty_otp">Enter valid OTP</string>
    <string name="error_empty_title">Please enter title</string>
    <string name="error_empty_budget">Please enter budget</string>
    <string name="error_empty_desc">Please enter description</string>
    <string name="error_empty_address">Please enter your address</string>
    <string name="error_empty_city">Please enter your city</string>
    <string name="error_empty_state">Please enter your state</string>
    <string name="error_empty_businessname">Please enter your business name</string>
    <string name="error_empty_businessaddress">Please enter your business address</string>
    <string name="error_empty_zipcode">Please enter your zipcode</string>
    <string name="text_password_mismatch">Password Mismatch</string>
    <string name="loremipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="resendcode">Resend Code</string>
    <string name="notification">Notification</string>
    <string name="editaddress">Edit Profile</string>
    <string name="defaults">Default</string>
    <string name="surelogout">Are you sure you want \nto logout?</string>
    <string name="cancel">Cancel</string>
    <string name="delivAddresList">Delivery Address List</string>
    <string name="defaulttxt">Default</string>
    <string name="label">Label</string>
    <string name="no_recrd_found">No Record Found</string>
    <string name="api_key">AIzaSyAdoq9IbV9WMAc_wAyEpNZslrPUmJ_RCLg</string>
    <string name="error_processing_places_api">Error processing Places API URL</string>
    <string name="error_connecting_to_places_api">Error connecting to Places API</string>
    <string name="error_cannot_process_json_results">Cannot process JSON results</string>
    <string name="error_lib_not_initialized">Please initialize the api before using it</string>
    <string name="delivAddresAdd">Add Delivery Address</string>
    <string name="addadresssuc">Address added successfully.</string>
    <string name="defaultStore">Default Store</string>
    <string name="store">Store</string>
    <string name="miles">miles</string>
    <string name="back">Back</string>
    <string name="oops">Oops!</string>
    <string name="needlogin">You need to login first</string>
    <string name="health_and_beauty">Health and beauty</string>
    <string name="health_and_beauty_health">Health and beauty health</string>
    <string name="success">Success</string>
    <string name="ok">Ok</string>
    <string name="email">Email Id:</string>
    <string name="filter_category">Category</string>
    <string name="filter_product">Product</string>
    <string name="all_product">All Product</string>
    <string name="all_store">All Store</string>
    <string name="apply">Apply</string>
    <string name="seeall">See All</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="returnpolicy">Return Policy</string>
    <string name="featureditem">Featured Items</string>
    <string name="relateditem">Related Item</string>
    <string name="featured">Featured</string>
    <string name="food">Food</string>
    <string name="categories">Categories</string>
    <string name="search_for_items">Search items</string>
    <string name="addtocart">Add to cart</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="checkout">Checkout</string>
    <string name="delivAddresUpdate">Update Address</string>
    <string name="updateadresssuc">Update Address Successfully</string>
    <string name="removed">Address Removed Successfully</string>
    <string name="updateadress">Update Address</string>
    <string name="make_payment">Make Payment</string>
    <string name="stripe_msg1">Payment</string>
    <string name="stripe_msg2">Amount Due :</string>
    <string name="stripe_msg3">Card Number*</string>
    <string name="stripe_msg4">Expiration Date</string>
    <string name="stripe_msg5">CVC/CVV</string>
    <string name="stripe_msg6">Card Holder Name</string>
    <string name="stripe_msg7">Month</string>
    <string name="stripe_msg8">Year</string>
    <string name="stripe_msg9">Submit Payment</string>
    <string name="stripe_msg10">Review Order</string>
    <string name="stripe_msg11">Enter your Card Information</string>
    <string name="stripe_msg12">MM</string>
    <string name="stripe_msg13">YY</string>
    <string name="__stripe_invalidate_card_number">The card number entered is invalid</string>
    <string name="__stripe_invalidate_expirymonth">The expiration month entered is invalid.</string>
    <string name="__stripe_invalidate_expiryyear">The expiration year entered is invalid.</string>
    <string name="__stripe_invalidate_cvc">The CVC code entered is invalid.</string>
    <string name="__stripe_invalidate_card_detail">The card details entered are invalid.</string>
    <string name="__stripe_invalidate_holder_name">Card Holder name is required.</string>
    <string name="summary">Summary</string>
    <string name="stripe_msg14">CVV Number</string>
    <string name="orderhsitory">Order Details</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
</resources>