<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/_35dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.app.shopin.customview.BoldTextView
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"

            />

        <com.app.shopin.customview.BoldTextView
            android:id="@+id/oopsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oops"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backbtn"

             />


        <com.app.shopin.customview.RegularTextView
            android:id="@+id/needloginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/needlogin"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oopsTV"
            />

        <com.app.shopin.customview.RegularButton
            android:id="@+id/loginBTN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_60dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:background="@drawable/buttonbackground"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/needloginTV"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>