<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logout"
             />

        <com.app.shopin.customview.SemiBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center"
            android:text="@string/surelogout"
            android:textSize="22sp"
            android:textColor="@color/black"
         />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginTop="@dimen/_30dp"
            >
            <com.app.shopin.customview.RegularButton
                android:id="@+id/logOutBTN"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/logout"
                android:layout_weight="0.5"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:background="@color/colorPrimary"
                android:layout_marginRight="@dimen/_5dp"

                />

            <com.app.shopin.customview.RegularButton
                android:id="@+id/cancelBTN"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:layout_weight="0.5"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:background="@color/gray"
                android:layout_marginLeft="@dimen/_5dp"

                />
        </LinearLayout>


    </LinearLayout>

</layout>