<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".Payment.StripePaymentActivity"
    >

<data>

</data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_grey"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"

        >



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_summary"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5dp"
            android:layout_marginTop="@dimen/_10dp"
            app:cardElevation="@dimen/_5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:orientation="vertical"
                android:padding="@dimen/_8dp">

                <com.app.shopin.customview.RegularTextView
                    android:id="@+id/tv_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stripe_msg11"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/stripe_dialog_card_container"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:animateLayoutChanges="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic__stripe_card"
                            tools:ignore="ContentDescription" />

                        <com.app.shopin.customview.RegularEditText
                            android:id="@+id/edit_cardnumber"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_2dp"
                            android:layout_marginRight="@dimen/_2dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/stripe_msg3"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="19"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sp" />

                        <ImageView
                            android:id="@+id/stripe_card_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic__visa"
                            android:visibility="gone"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#CCCCCC" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:orientation="horizontal">

                    <com.app.shopin.customview.RegularTextView
                        android:id="@+id/tv_expiration_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/stripe_msg4"
                        android:textSize="@dimen/_10sp" />

                    <com.app.shopin.customview.RegularTextView
                        android:id="@+id/tv_cvv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="@string/stripe_msg14"
                        android:textSize="@dimen/_10sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:orientation="horizontal">

                    <com.app.shopin.customview.RegularEditText
                        android:id="@+id/edit_month"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:hint="@string/stripe_msg12"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="@dimen/_12sp" />

                    <com.app.shopin.customview.RegularEditText
                        android:id="@+id/edit_year"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:hint="@string/stripe_msg13"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="@dimen/_12sp" />

                    <com.app.shopin.customview.RegularEditText
                        android:id="@+id/edit_cvv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:hint="@string/stripe_msg5"
                        android:inputType="numberPassword"
                        android:maxLength="3"
                        android:textSize="@dimen/_12sp" />
                </LinearLayout>



                    <com.app.shopin.customview.RegularEditText
                        android:id="@+id/edt_cardholder_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50dp"
                        android:inputType="text"
                        android:singleLine="true"
                        android:hint="Card Holder Name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <com.app.shopin.customview.RegularTextView
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:layout_marginBottom="@dimen/_15dp"
        android:background="@drawable/buttonbackground"
        android:gravity="center"
        android:text="@string/make_payment"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp" />
</RelativeLayout>
</layout>